[package]
name = "kogic"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
eframe = { version = "0.28.1", default-features = false, features = ["default_fonts", "glow", "wayland"] }
egui = "0.28.1"
egui-snarl = "0.4.3"
serde = { version = "1.0.204", features = ["derive"] }


[profile.release]
lto = "thin"
strip = "debugsymbols"

[profile.dev.package."*"]
opt-level = 1
